--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
   <section id="abstract" data-include-format="markdown" data-include="samenvatting.md"></section>
   <section id="sotd"><p></p></section><!-- Wordt automatisch gevuld -->
 
-  <!-- TODO: voeg hier je eigen hoofdstukken toe -->
+<!-- voeg hier eventueel nog andere eigen hoofdstukken toe -->
   <section data-include-format="markdown" data-include="algemeen/inleiding_Aquo.md" class="informative"><h2>Inleiding informatiemodel Water</h2></section>
-  <section data-include-format="markdown" data-include="algemeen/inleiding_IMWA-basis.md" class="informative"><h2>Inleiding IMWA Basis</h2></section>
+  <!-- TODO 1: schrijf een inleiding_IMWA-??? voor je speciefieke catalogus in markdown en plaats die in de map algemeen. En verander hieronder de link naar dat .md bestand -->
+  <section data-include-format="markdown" data-include="algemeen/inleiding_IMWA-basis.md" class="informative"><h2>Mooie hoofdstuktitel</h2></section>
   <section data-include-format="markdown" data-include="algemeen/uitleg_IM.md" class="informative"><h2>Uitleg (UML) informatiemodel</h2></section>
     <!--<section data-include-format="markdown" data-include="mermaid.md"></section>-->
 
