--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section data-include-format="markdown" data-include="algemeen/uitleg_IM.md" class="informative"><h2>Uitleg (UML) informatiemodel</h2></section>
     <!--<section data-include-format="markdown" data-include="mermaid.md"></section>-->
 
-  <!-- Als je document een door imvertor gegenereerde catalogus bevat kan je die -->
+  <!-- TODO 2 Als je document een door imvertor gegenereerde catalogus bevat kan je die -->
   <!-- opnemen door de volgende regel uit commentaarhaakjes te halen en aan te passen -->
   <div id="catalogus" data-include="data/IMWA-basis-cat.respec.html" data-include-replace=true></div>
 
